# piano

./: base.ly  refresh.py  refresh_snippet.py  settings.v1.ly  sheet.html  sheet.json  snippet.html  snippet.json  snippet.py  snippet_old.json  structure.v1.ly  template.v1.ly  template_snippet.ly
music/: Brahms Lullaby (EveryonePiano 544).ly  Brahms' Lullaby (EveryonePiano 544).ly  Brahms' Lullaby (EveryonePiano 544).mid  Brahms-Lullaby-EveryonePiano-544.ly  Brahms-Lullaby-EveryonePiano-544.mid  Brahms_Lullaby_EveryonePiano_544.ly  Canon (EveryonePiano 31).ly  Canon (EveryonePiano 31).mid  Canon (EveryonePiano 8499).ly  Canon (EveryonePiano 8499).mid  Canon_EveryonePiano_8499.ly  Castle in the Sky (EveryonePiano 1596).ly  Castle in the Sky (EveryonePiano 1596).mid  Castle_in_the_Sky_EveryonePiano_1596.ly  Castle_in_the_Sky_EveryonePiano_1596.mid  Childhood Memory (EveryonePiano 8).ly  Childhood Memory (EveryonePiano 8).mid  Childhood_Memory_EveryonePiano_8.ly  Childhood_Memory_EveryonePiano_8.mid  Comptine d'un Autre Été (EveryonePiano 141).ly  Comptine_d'un_Autre_Été_EveryonePiano_141.ly  Comptine_d'un_Autre_Été_EveryonePiano_141.mid  Greensleeves (MuseScore 35704259-6340178).ly  Greensleeves (MuseScore 35704259-6340178).mid  Kiss the Rain (EveryonePiano 2).ly  Kiss the Rain (EveryonePiano 2).mid  Merry-Go-Round of Life (MuseScore 16006641-4197961).ly  Merry-Go-Round of Life (MuseScore 16006641-4197961).mid  Minuet in G Major (EveryonePiano 55).ly  Minuet_in_G_Major_EveryonePiano_55.ly  Minuet_in_G_Major_EveryonePiano_55.mid  Passacaglia (YouTube M3uD6vPIKEA).ly  Passacaglia (YouTube M3uD6vPIKEA).mid  Passacaglia_Bilibili_471148656718506228.ly  Passacaglia_Bilibili_471148656718506228.mid  Passacaglia_YouTube_M3uD6vPIKEA.ly  Passacaglia_YouTube_M3uD6vPIKEA.mid  Romance d'Amour (EveryonePiano 1704).ly  Romance d'Amour (EveryonePiano 1704).mid  Romance d'Amour (MuseScore 22591-5371941).ly  (+18 more)
music2ly/: .gitignore  README.md  pyproject.toml  setup.sh
music2ly/output/It's A Small World/: It's A Small World.ly  recognized.musicxml
music2ly/output/It's A Small World/chunks/: chunk_001.musicxml  chunk_002.json  chunk_002.musicxml
music2ly/output/It's A Small World/lilypond_chunks/: chunk_001.ly  chunk_001.raw.txt  chunk_002.ly  chunk_002.raw.txt
music2ly/output/It's-A-Small-World/chunks/: chunk_001.json
music2ly/output/It's-A-Small-World/lilypond_chunks/: chunk_002.raw.txt
music2ly/output/Oh Susanna/: Oh Susanna.ly  Oh Susanna.mid  recognized.musicxml
music2ly/output/Oh Susanna/chunks/: chunk_001.json  chunk_001.musicxml  chunk_002.json  chunk_002.musicxml
music2ly/output/Oh Susanna/lilypond_chunks/: chunk_001.ly  chunk_001.raw.txt  chunk_002.ly  chunk_002.raw.txt
music2ly/output/白桦林/: transcription.meta.json
music2ly/src/image2ly/: __init__.py  __main__.py  cli.py  models.py  omr.py  pipeline.py
music2ly/src/music2ly/: __init__.py  config.py  lilypond.py  models.py  musicxml.py
music2ly/src/music2ly/prompts/: lilypond_system.txt
music2ly/src/video2ly/: __init__.py  __main__.py  cli.py  extract.py  pipeline.py  quantize.py
music2ly/tests/: test_lilypond.py  test_paths.py
nursery/: Happy Birthday to You (EveryonePiano 1104).ly  Happy Birthday to You (EveryonePiano 1104).mid  (+27 more)
nursery-rhyme/: Happy-Birthday-to-You-EveryonePiano-495.mid  Happy_Birthday_to_You_EveryonePiano_495.ly  Happy_Birthday_to_You_MuseScore_173585_166951.ly  Twinkle_Twinkle_Little_Star_EveryonePiano_1656.ly  happy-birthday-to-you-everyonepiano-495.ly  happy-birthday-to-you-musescore-173585-166951.ly  小白船-everyonepiano-512.ly  小白船-everyonepiano-512.mid  小白船_EveryonePiano_512.ly  小红帽_EveryonePiano_141.ly  洋娃娃和小熊跳舞-everyonepiano-505.ly  祝你生日快乐-495.ly  祝你生日快乐-495.mid
(+331 files in other folders)
