[project]
name = "music2ly"
version = "0.1.0"
description = "Music to LilyPond sheet music: video2ly (audio) and image2ly (sheet image) tools over a shared core"
readme = "README.md"
requires-python = ">=3.10,<3.13"
# Shared core only: MusicXML handling + LLM MusicXML->LilyPond translation.
# Heavy, tool-specific deps live in the extras below and are imported lazily,
# so installing one tool's extra never drags in the other tool's stack.
dependencies = [
    "music21>=9.1.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# video2ly: YouTube audio -> MIDI -> MusicXML
video = [
    "yt-dlp>=2024.0.0",
    "piano-transcription-inference>=0.0.6",
    "torch>=2.0.0",
]
# image2ly: sheet image -> MusicXML (OMR). homr is run as an external CLI
# (uvx homr, AGPL) and is intentionally not a Python dependency here.
image = [
    "oemer>=0.1.8",
]
# Optional transcription backend; basic-pitch may require Python 3.10-3.11 on
# macOS (tensorflow-macos wheels). Default video "piano" backend works on 3.10-3.12.
transcribe-basic = [
    "basic-pitch>=0.4.0",
]
all = [
    "music2ly[video,image]",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
video2ly = "video2ly.cli:main"
image2ly = "image2ly.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
music2ly = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
